# interview

./: .gitignore  CMakeLists.txt
app/: account.cpp  account.hpp  app.cpp
